--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,6 +35,10 @@
   	<url-pattern>/calculaedad</url-pattern>
   </servlet-mapping>
   
+<!--   <session-config> -->
+<!--   	<session-timeout>5</session-timeout> -->
+<!--   </session-config> -->
+  
 </web-app>
 
 
