--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
 /build/
+
+# Eclipse Core      
+.project
+
+# JDT-specific (Eclipse Java Development Tools)     
+.classpath
+
+.settings/org.eclipse.wst.common.project.facet.core.xml
+
